--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,24 @@
+# remap prefix to C-x
+unbind C-b
+set-option -g prefix C-x
+bind-key C-x send-prefix
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
+
 #split panes using | and -
 bind | split-window -h
 bind - split-window -v
 
 unbind '"'
 unbind %
+
+# Switch panes with M-arrows
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+set -g mouse on
+
+
