--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,9 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# copy into x clipboard
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+
 set -g mouse on
 
 
